heading alignment fix

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
     opacity: 1;
     transform: translateY(50px);
     animation: fadeInAppear 1s ease-in;
-    margin-bottom: 700px;
+    margin-bottom: 180px;
     margin-left: 50px;
 }
 
